Media Controls: allow navigation with accessibility tools.

The media controls auto-hide mechanism breaks accessibility tools. This
prevents the controls from fully hiding when navigated with
accessibility tools. Instead of marking themselves as `display:none;`,
this only mark the controls as hidden and will show them again if the
user navigates trough them again. Similar to using a mouse.

Bug: 667833
Change-Id: I7c2dbfd4b047e2955f6ffa9fb1a5f3bbe37878fd
Reviewed-on: https://chromium-review.googlesource.com/999637
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549774}