third_party/blink/renderer/modules/media_controls/elements/media_control_panel_element.h
@@ -26,6 +26,8 @@ class MediaControlPanelElement final : public MediaControlDivElement {
   void MakeOpaque();
   void MakeTransparent();
 
+  void SetKeepDisplayedForAccessibility(bool);
+
  private:
   void DefaultEventHandler(Event*) override;
   bool KeepEventInNode(Event*) override;
@@ -37,6 +39,7 @@ class MediaControlPanelElement final : public MediaControlDivElement {
 
   bool is_displayed_ = false;
   bool opaque_ = true;
+  bool keep_displayed_for_accessibility_ = false;
 
   TaskRunnerTimer<MediaControlPanelElement> transition_timer_;
 };
